# particle-lifesim

./: .SRCINFO  .gitignore  PKGBUILD  README.md  commands.txt  cross-windows.txt  examples.txt  meson.build  steps.md
include/: conf.h  utils.h
lib/: readme.txt
src/: main.cpp
